20061003 version: corelib-0.43
20061007 code: missing header files in insthier
20061003 version: corelib-0.431
20061013 code: endian.h and signal.h conflict with standard C library
               on linux. renamed to sig.h and byteorder.h
20061013 version: corelib-0.44
20061019 code: Mkf-local gone. new coreproject tools.
20061019 code: integer and float sysdep split.
20061028 code: postinstall added to fix darwin 'ar' bugs.
20061028 code: signal.a -> sig.a for uniformity.
20061028 code: fixed deinstaller deps.
20061028 code: obsolete uint8.h removed.
20061028 version: corelib-0.441
20061029 code: no longer install symlinks to static libraries, this is
               to work around some more stupid Darwin misbehaviour.
20061109 code: FMT_ULONG == (sizeof(long) >> 1).
20061109 code: array no longer uses specific sized integers.
20061109 code: t_signal test moved to t_sig.
20061111 code: FMT_ULONG == ((sizeof(long) >> 1) * 8).
               FMT_ULONGLONG == ((sizeof(long long) >> 1) * 8).
20061111 code: stalloc now gets the parameters in the right order (this could
               cause crashes on linux, other platforms seemed not to be
               affected).
20061111 code: corelib-conf no longer prints raw include dir, so the
               only valid #include statements are of the form <corelib/*.h>
20061125 code: removal of all superfluous typedefs. buffer is now
               struct buffer. sstring is now struct sstring. etc. this
               is because of various compiler, aesthetic, stylistic and
               whimsical issues.
20061125 code: iarray added.
20061126 version: corelib 0.5
20061128 code: fixed null-dereference in iarray_node.c (if no nodes
               could be allocated).
20061128 code: array.h uses void * for x instead of char *.
20061128 code: array now no longer depends on bin.h. bin_copy() routines
               have been moved inline.
20061128 code: sstring_trunc() now implemented as a macro around
               sstring_chop().