@@ -17,6 +17,7 @@ void array_free(struct array *);
 int array_copy(struct array *, const struct array *);
 int array_resize(struct array *, unsigned long);
 void array_trunc(struct array *, unsigned long);
+void array_zero(struct array *);
 
 unsigned long array_size(const struct array *);
 unsigned long array_bytes(const struct array *);
