@@ -1,0 +1,9 @@
+#include "array.h"
+
+void array_zero(struct array *a)
+{
+  a->x = 0;
+  a->u = 0;
+  a->a = 0;
+  a->es = 0;
+}
